# opentree

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  TAURI_MIGRATION_PLAN.md  design.md  opentree.schema.json  package-lock.json  package.json  skills-lock.json  spec.md
.claude/: settings.local.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  asset.rs  channels.rs  lib.rs  main.rs  publish.rs
crates/opentree-core/: Cargo.toml
crates/opentree-core/src/: build.rs  config.rs  lib.rs  render.rs  validate.rs
crates/opentree-core/tests/: build.rs  config_roundtrip.rs  render_snapshots.rs  schema_migration.rs  validate.rs
crates/opentree-core/tests/common/: mod.rs
crates/opentree-core/tests/fixtures/: v10_schedules.json  v2_minimal.json  v3_with_connections.json  v6_form_email.json  v8_analytics.json
crates/opentree-core/tests/snapshots/: render_snapshots__all_blocks_page.snap  render_snapshots__analytics_plausible.snap  render_snapshots__button_pill.snap  render_snapshots__button_soft.snap  render_snapshots__favicon.snap  render_snapshots__image_background_credit.snap  render_snapshots__layout_featured.snap  render_snapshots__locale_ko_page.snap  render_snapshots__minimal_page.snap  render_snapshots__robots_with_sitemap.snap  render_snapshots__robots_without_sitemap.snap  render_snapshots__scheduled_wrapper.snap  render_snapshots__sitemap_xml.snap  render_snapshots__video_background.snap
docs/: apps-docs-single-page-ui-plan.md  fumadocs-site-plan.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json
plan/: deep-research-report.md  linktree-replacement-todo.md
scripts/: cli-smoke.js
src/: build.js  cli.js  completion.js  config.js  deploy.js  (+10 more)
(+197 files in other folders)
