[package]
name = "opentree-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
maud = "0.26"
thiserror = "2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
