[package]
name = "opentree-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "opentree_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
opentree-core = { path = "../../../crates/opentree-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
